# leaudio

./: .gitignore  README.md  pyproject.toml
apps/: app_broadcast_assistant.py  app_broadcast_source.py  app_unicast_client.py  bap_broadcast_assistant.py  bap_broadcast_source.py  bap_unicast_client.py  device.json  unicast_client.py
controller/: README.txt  nRF53dk_hci_uart.hex
leaudio/: __init__.py  bap_broadcast_assistant.py  bap_broadcast_source.py  bap_connector.py  bap_unicast_client.py  encoder.py  utils.py
utils/: le_audio_encoder.py
