[project]
name = "leaudio"
version = "0.1.0"
description = "A LE Audio package"
authors = [{name="Markus Jellitsch"}]
requires-python = ">=3.8"
dependencies = ["bumble>=0.0.202","scipy"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = "."


[project.scripts]
unicast_client = "leaudio.apps.bap_unicast_client:main"
