[project]
name = "leaudio"
version = "0.1.0"
description = "A LE Audio package"
authors = [{name="Markus Jellitsch"}]
requires-python = ">=3.8"
dependencies = ["bumble  @ git+https://github.com/markusjellitsch/bumble.git@iso-packet-sent-evt","scipy","wasmtime","pyserial-asyncio @ git+https://github.com/hugh-manning/pyserial-asyncio.git@windows-proactor"]


[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"



[project.scripts]
unicast_client = "leaudio.apps.app_unicast_client:main"
broadcast_source = "leaudio.apps.app_broadcast_source:main"
broadcast_assistant = "leaudio.apps.app_broadcast_assistant:main"

[tool.setuptools]
packages = [
    "leaudio",
    "leaudio.apps"
]

[tool.setuptools.package-dir]
"leaudio" = "leaudio"
"leaudio.apps" = "apps"
